resources/css/aligulac.css
/* ... */
.table-bordered > thead > tr > th,
.table-bordered > tbody > tr > th,
.table-bordered > tfoot > tr > th,
.table-bordered > thead > tr > td,
.table-bordered > tbody > tr > td,
.table-bordered > tfoot > tr > td {
    border: 1px solid var(--border-color);
}

.table > thead > tr > th {
    border-bottom: 2px solid var(--border-color) !important;
    background-color: var(--bg-secondary);
}

.table > tbody > tr > th {
    background-color: var(--bg-secondary);
}

.table > thead > tr > th,
.table > tbody > tr > th,
.table > tfoot > tr > th,
.table > thead > tr > td,
.table > tbody > tr > td,
.table > tfoot > tr > td {
    border-top: 1px solid var(--border-color) !important;
}

.table-striped > tbody > tr:nth-of-type(odd) {
    background-color: var(--bg-secondary);
}

.table-hover > tbody > tr:hover {
    background-color: var(--bg-secondary);
}

/* Ratinglist table */
.rl_number { width: 2em; text-align: right; }
.rl_icon { width: 1em; text-align: center; }
.rl_arrow { width: 2em; text-align: right; }
.rl_name { width: 25%; }
.rl_team { width: 20%; }
.rl_rating { width: 8%; text-align: right; padding-left: 1em; }

/* Historical overview table */
.ho_icon { width: 13%; text-align: right; }
.ho_pctg { width: 2em; text-align: right; }
.ho_num { width: 13%; text-align: right; }

/* Earnings table */
.ea_number { width: 2em; text-align: right; }
.ea_icon { width: 1em; text-align: center; }
.ea_earnings { text-align: right; width: 10em; }
.ea_flush { width: 15%; }

/* Prize pool table */
.pp_header {
    background-color: var(--bg-tertiary);
    color: var(--fg-primary);
}

.pp_showbtn { font-variant: small-caps; }
.pp_icon { width: 1em; text-align: center; }
.pp_1 { background-color: var(--gold); }
.pp_2 { background-color: var(--silver); }
.pp_3 { background-color: var(--bronze); }

/* Match table */
.lm_date { width: 17%; }
.lm_rta { text-align: right; width: 3.5em; }
.lm_pla { text-align: right; width: 23%; }
.lm_score { width: 7em; text-align: center; }
.lm_plb { width: 23%; }
.lm_rtb { text-align: right; width: 3.5em; }
.lm_right { text-align: right; width: 17%; }

.eventheader {
    background: var(--bg-tertiary);
    color: var(--fg-primary);
}

.eventheader th {
    border-bottom: 1px solid var(--border-color) !important;
}

.eventheader-right { font-variant: small-caps; }

.winner a, td.winner { font-weight: 900; }

.loser a {
    font-weight: 100;
    color: var(--fg-muted);
}

.loser a:hover {
    color: var(--fg-secondary);
}

td.loser {
    color: var(--fg-disabled);
}

/* Days since styles */
.clock-expandable { cursor: pointer; }

/* Subelements of h2 headings */
h2.sub > small.right {
    font-family: var(--font-main);
    font-size: small;
    position: absolute;
    bottom: 0.2em;
    right: 0;
    font-variant: normal;
}

h2.sub > .left {
    font-family: var(--font-main);
    font-size: small;
    position: absolute;
    bottom: 0.2em;
    margin-left: 1em;
}

/* Text justification */
div.text, div.text > p, div.text > ul > li { text-align: justify; }

/* Styles for message boxes */
.message, .alert {
    border-style: solid;
    border-width: 1px;
    padding: 1em;
    border-radius: 0.5em;
    margin-bottom: 1em;
    margin-top: 1em;
    overflow: auto;
    display: flex;
    align-items: flex-start;
    gap: 1em;
}

.message .material-symbols-outlined {
    font-size: 2em;
    flex-shrink: 0;
}

.message p {
    margin: 0;
}

.m-success, .alert-success {
    background-color: var(--msg-success-bg);
    border-color: var(--msg-success-border);
    color: var(--msg-success-fg);
}

.m-success:hover { background-color: var(--msg-success-border); }

.m-warning, .alert-warning {
    background-color: var(--msg-warning-bg);
    border-color: var(--msg-warning-border);
    color: var(--msg-warning-fg);
}

.m-warning:hover { background-color: var(--msg-warning-border); }

.m-info, .alert-info {
    background-color: var(--msg-info-bg);
    border-color: var(--msg-info-border);
    color: var(--msg-info-fg);
}

.m-info:hover { background-color: var(--msg-info-border); }

.m-error, .alert-danger {
    background-color: var(--msg-error-bg);
    border-color: var(--msg-error-border);
    color: var(--msg-error-fg);
}

.m-error:hover { background-color: var(--msg-error-border); }

/* Class for inline form labels */
.inline-label { margin-left: 0.7em; margin-right: 0.2em; }

/* Infobox tables */
.ibox-left {
    border-right-style: solid;
    border-right-width: 1px;
    border-right-color: var(--border-color);
}

/* Keep race and flag icons apart */
.player img, .ui-corner-all img, .lm_plb img, .player .fi, .ui-corner-all .fi, .lm_plb .fi { padding-right: 0.3em; }
.playerleft img, .lm_pla img, .playerleft .fi, .lm_pla .fi { padding-left: 0.3em; }

.fi {
    vertical-align: middle;
    width: 1.33333333em;
    line-height: 1em;
    display: inline-block;
}

/* Event manager tree */
.tree-node {
    border-radius: 0px !important;
    margin-top: 1px;
    border-top: none;
}

.tree-node-first {
    border-top: 1px solid var(--border-color);
}

.tree-node-event { background: var(--tree-node-event-bg); }
.tree-node-round { background: var(--tree-node-round-bg); }

/* Breadcrumbs in headers */
h2 .breadcrumb {
    background: transparent !important;
    margin-bottom: 0px;
    padding: 0px 0px;
}

h2 .breadcrumb li.active { color: var(--fg-primary); }
h2 .breadcrumb > li + li:before { padding: 0 0; content: "/"; }

/* Sortable lists */
#sortable li { cursor: pointer; }

/* Event table */
.event-panel { box-shadow: none; }
.event-panel a.eventname {
    font-size: 1.3em;
    font-weight: 400;
    border-style: none;
    font-variant: small-caps;
    color: var(--fg-primary);
}

.event-panel a.eventname:hover {
    color: var(--fg-secondary);
    text-decoration: none;
}

.event-panel-individual {
    background-color: var(--event-panel-individual-bg);
    border-color: var(--event-panel-individual-border);
}
/* ... */

